# rp2040_aprs_sensor_node

./: .gitignore  README.md
firmware/: CMakeLists.txt
firmware/src/: dra818.c  dra818.h  main.c  tmp102.c  tmp102.h
node_pcb_v1/: .gitignore  fp-lib-table  sensor_node_v1.kicad_pcb  sensor_node_v1.kicad_pro  sensor_node_v1.kicad_sch  sym-lib-table
node_pcb_v1/parts/DRA818V/: DORJI_DRA818V.kicad_mod  DRA818V.lib
node_pcb_v1/parts/ECS-120-20-3X-TR/: ECS-120-20-3X-TR.lib  ECS-120-20-3X-TR.step  XTAL_ECS-120-20-3X-TR.kicad_mod
node_pcb_v1/parts/RP2040/: RP2040-QFN-56.kicad_mod
node_pcb_v1/parts/USB_C_Receptacle_HRO_TYPE-C-31-M-12.pretty/: USB_C_HRO-31-M-12_nofront.kicad_mod
